telas lixo. esgotamento e fornecimento de agua

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -30,8 +30,11 @@
           ></a>
           <div class="sub-menu">
             <a href="ato-regulatorio"><i class="fas fa-cogs"></i>Atos Regulatórios</a>
-            <a href="#" class="sub-item">Sub Item 2</a>
-            <a href="#" class="sub-item">Sub Item 3</a>
+			<a href="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
+			<a href="fornecimentoDeAgua" class="sub-item">Fornecimento de Água</a>
+			<a href="esgotoSanitario" class="sub-item">Esgotamento Sanitário</a>
+			<a href="destinacaoLixo" class="sub-item">Destinação do Lixo</a>
+			<a href="forma-ocupação" class="sub-item">Formas de Ocupação</a>
           </div>
         </div> 
       </nav>
