--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -29,12 +29,12 @@
             <i class="fas fa-angle-right dropdown"></i
           ></a>
           <div class="sub-menu">
-            <a href="ato-regulatorio"><i class="fas fa-cogs"></i>Atos Regulatórios</a>
+            <a href="ato-regulatorio" class="sub-item">Atos Regulatórios</a>
 			<a href="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
 			<a href="fornecimentoDeAgua" class="sub-item">Fornecimento de Água</a>
 			<a href="esgotoSanitario" class="sub-item">Esgotamento Sanitário</a>
 			<a href="destinacaoLixo" class="sub-item">Destinação do Lixo</a>
-			<a href="forma-ocupação" class="sub-item">Formas de Ocupação</a>
+			<a href="forma-ocupacao" class="sub-item">Formas de Ocupação</a>
           </div>
         </div> 
       </nav>
