--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -9,7 +9,7 @@
       <div class="img-menu">
         <img
           class="logoSumare animate__animated animate__bounceIn mx-auto"
-          src="http://localhost:8080/front-educacional-caxias/resources/assets/img/logoBranco.png"
+          src="http://localhost:8090/front-educacional-caxias/resources/assets/img/logoBranco.png"
           alt="Logo Prefeitura Caxias do Sul"
         />
       </div> 
@@ -35,6 +35,10 @@
 			<a href="esgotoSanitario" class="sub-item">Esgotamento Sanitário</a>
 			<a href="destinacaoLixo" class="sub-item">Destinação do Lixo</a>
 			<a href="forma-ocupacao" class="sub-item">Formas de Ocupação</a>
+			<a href="fonteEnergia" class="sub-item">Fonte de Energia</a>
+			<a href="fonteEnergia" class="sub-item">Localização</a>
+			<a href="tipos-dependencias-adm" class="sub-item">Tipos de Dependências ADM</a>
+			<a href="modalidade-escolar" class="sub-item">Modalidade Escolar</a>
           </div>
         </div> 
       </nav>
