Ajustes de nomenclaturas e tela de Língua de Ensino

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -36,9 +36,11 @@
 			<a href="destinacaoLixo" class="sub-item">Destinação do Lixo</a>
 			<a href="forma-ocupacao" class="sub-item">Formas de Ocupação</a>
 			<a href="fonteEnergia" class="sub-item">Fonte de Energia</a>
-			<a href="fonteEnergia" class="sub-item">Localização</a>
-			<a href="tipos-dependencias-adm" class="sub-item">Tipos de Dependências ADM</a>
+			<a href="tipoLocalizacao" class="sub-item">Localização</a>
+			<a href="tipos-dependencias-adm" class="sub-item">Tipos de Dependências Adm</a>
 			<a href="modalidade-escolar" class="sub-item">Modalidade Escolar</a>
+			<a href="linguas-ensino" class="sub-item">Línguas de Ensino</a>
+			<a href="periodicidade" class="sub-item">Periodicidade</a>
           </div>
         </div> 
       </nav>
