--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -21,9 +21,6 @@
       <hr />
       <nav class="menu">
         <div class="item">
-          
-        </div>
-        <div class="item">
           <a class="sub-btn"
             ><i class="fas fa-cogs"></i>Pré-Cadastros
             <i class="fas fa-angle-right dropdown"></i
@@ -43,6 +40,15 @@
 			<a href="periodicidade" class="sub-item">Periodicidade</a>
           </div>
         </div> 
+      	<div class="item">
+          <a class="sub-btn">
+          <i class="fa-solid fa-bars-staggered"></i>Cadastros
+            <i class="fas fa-angle-right dropdown"></i
+          ></a>
+          <div class="sub-menu">
+            <a href="escolas" class="sub-item">Escolas</a>
+          </div>
+        </div>
       </nav>
     </section>
   </body>
