--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -28,16 +28,18 @@
           <div class="sub-menu">
             <a href="ato-regulatorio" class="sub-item">Atos Regulatórios</a>
 			<a href="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
-			<a href="fornecimentoDeAgua" class="sub-item">Fornecimento de Água</a>
-			<a href="esgotoSanitario" class="sub-item">Esgotamento Sanitário</a>
 			<a href="destinacaoLixo" class="sub-item">Destinação do Lixo</a>
-			<a href="forma-ocupacao" class="sub-item">Formas de Ocupação</a>
+			<a href="esgotoSanitario" class="sub-item">Esgotamento Sanitário</a>
 			<a href="fonteEnergia" class="sub-item">Fonte de Energia</a>
-			<a href="tipoLocalizacao" class="sub-item">Localização</a>
-			<a href="tipos-dependencias-adm" class="sub-item">Tipos de Dependências Adm</a>
-			<a href="modalidade-escolar" class="sub-item">Modalidade Escolar</a>
+			<a href="forma-ocupacao" class="sub-item">Formas de Ocupação</a>
+			<a href="fornecimentoDeAgua" class="sub-item">Fornecimento de Água</a>
 			<a href="linguas-ensino" class="sub-item">Línguas de Ensino</a>
+			<a href="tipoLocalizacao" class="sub-item">Localização</a>
+			<a href="modalidade-escolar" class="sub-item">Modalidade Escolar</a>
 			<a href="periodicidade" class="sub-item">Periodicidade</a>
+			<a href="situacaoFuncionamento" class="sub-item">Situação de Funcionamento</a>
+			<a href="tipos-dependencias-adm" class="sub-item">Tipos de Dependências Adm</a>
+			<a href="tratamentoDeLixo" class="sub-item">Tratamento de Lixo</a>
           </div>
         </div> 
       	<div class="item">
