--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -35,6 +35,7 @@
 			<a href="fornecimentoDeAgua" class="sub-item">Fornecimento de Água</a>
 			<a href="linguas-ensino" class="sub-item">Línguas de Ensino</a>
 			<a href="tipoLocalizacao" class="sub-item">Localização</a>
+			<a href="telefones" class="sub-item">Tipo Telefone</a>
 			<a href="modalidade-escolar" class="sub-item">Modalidade Escolar</a>
 			<a href="periodicidade" class="sub-item">Periodicidade</a>
 			<a href="situacaoFuncionamento" class="sub-item">Situação de Funcionamento</a>
