Implementação de novos campos na tela Escola.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -53,6 +53,15 @@
             <a href="escolas" class="sub-item">Escolas</a>
           </div>
         </div>
+        <div class="item">
+          <a class="sub-btn">
+          <i class="fa-solid fa-school "></i>Escolas
+            <i class="fas fa-angle-right dropdown"></i
+          ></a>
+          <div class="sub-menu">
+            <a href="acessar-escolas" class="sub-item">Acessar Escolas</a>
+          </div>
+        </div>
       </nav>
     </section>
   </body>
