novas telas academico

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -27,8 +27,10 @@
           ></a>
           <div class="sub-menu">
             <a href="ato-regulatorio" class="sub-item">Atos Regulatórios</a>
+            <a href="categoriaEscolaPrivada" class="sub-item">Categoria Escola Privada</a>
 			<a href="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
 			<a href="destinacaoLixo" class="sub-item">Destinação do Lixo</a>
+			<a href="entidadeSuperior" class="sub-item">Entidade Superior</a>
 			<a href="esgotoSanitario" class="sub-item">Esgotamento Sanitário</a>
 			<a href="fonteEnergia" class="sub-item">Fonte de Energia</a>
 			<a href="forma-ocupacao" class="sub-item">Formas de Ocupação</a>
@@ -38,10 +40,12 @@
 			<a href="tipoAtoRegulatorio" class="sub-item">Tipo Ato Regulatório</a>
 			<a href="telefones" class="sub-item">Tipo Telefone</a>
 			<a href="modalidade-escolar" class="sub-item">Modalidade Escolar</a>
+			<a href="orgaoPublico" class="sub-item">Orgão Público</a>
 			<a href="periodicidade" class="sub-item">Periodicidade</a>
 			<a href="situacaoFuncionamento" class="sub-item">Situação de Funcionamento</a>
 			<a href="tipos-dependencias-adm" class="sub-item">Tipos de Dependências Adm</a>
 			<a href="tratamentoDeLixo" class="sub-item">Tratamento de Lixo</a>
+			<a href="zoneamento" class="sub-item">Zoneamento</a>
           </div>
         </div> 
       	<div class="item">
