--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -42,6 +42,7 @@
 			<a href="modalidade-escolar" class="sub-item">Modalidade Escolar</a>
 			<a href="orgaoPublico" class="sub-item">Orgão Público</a>
 			<a href="periodicidade" class="sub-item">Periodicidade</a>
+			<a href="provedorInternet" class="sub-item">Provedor Internet</a>
 			<a href="situacaoFuncionamento" class="sub-item">Situação de Funcionamento</a>
 			<a href="tipos-dependencias-adm" class="sub-item">Tipos de Dependências Adm</a>
 			<a href="tratamentoDeLixo" class="sub-item">Tratamento de Lixo</a>
