Finalição das telas LinkInternet e Início das telas EscolaModalidade.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -29,7 +29,7 @@
             <a href="ato-regulatorio" class="sub-item">Atos Regulatórios</a>
             <a href="categoriaEscolaPrivada" class="sub-item">Categoria Escola Privada</a>
 			<a href="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
-			<a href="destinacaoLixo" class="sub-item">Destinação do Lixo</a>
+			<a href="destinacaoLixo" class="sub-item">Destinação de Lixo</a>
 			<a href="entidadeSuperior" class="sub-item">Entidade Superior</a>
 			<a href="esgotoSanitario" class="sub-item">Esgotamento Sanitário</a>
 			<a href="fonteEnergia" class="sub-item">Fonte de Energia</a>
@@ -58,7 +58,10 @@
           	<a href="acessar-escolas" class="sub-item">Minhas Escolas</a>
             <a href="escolas" class="sub-item">Cadastros</a>
              <a href="telefones-escolas" class="sub-item">Telefones</a>
-             <a href="link-internet" class="sub-item">Link Internet</a>
+             <a href="escola-modalidades" class="sub-item">Modalidades</a>
+             <a href="link-internet" class="sub-item">Internet</a>
+             <a href="escola-tratamento-de-lixo" class="sub-item">Tratamento de Lixo</a>
+             <a href="escola-destinacao-de-lixo" class="sub-item">Destinação de Lixo</a>
           </div>
         </div>
         <div class="item">
