Criação de telas do sub menu Escolas

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -55,13 +55,20 @@
             <i class="fas fa-angle-right dropdown"></i
           ></a>
           <div class="sub-menu">
-          	<a href="acessar-escolas" class="sub-item">Minhas Escolas</a>
-            <a href="escolas" class="sub-item">Cadastros</a>
-             <a href="telefones-escolas" class="sub-item">Telefones</a>
+             <a href="escolas" class="sub-item">Cadastros</a>
+          	 <a href="acessar-escolas" class="sub-item">Minhas Escolas</a>
              <a href="escola-modalidades" class="sub-item">Modalidades</a>
+             <a href="escola-linguas-de-ensino" class="sub-item">Línguas de Ensino</a>
+             <a href="marca-equipamento"class="sub-item">Marca Equipamento</a>
+             <a href="escola-predios-compartilhados" class="sub-item">Prédios Compartilhados</a>
+             <a href="escola-telefones" class="sub-item">Telefones</a>
              <a href="link-internet" class="sub-item">Internet</a>
-             <a href="escola-tratamento-de-lixo" class="sub-item">Tratamento de Lixo</a>
-             <a href="escola-destinacao-de-lixo" class="sub-item">Destinação de Lixo</a>
+             <a href="escola-tratamento-de-lixo" class="sub-item">Tratamentos de Lixo</a>
+             <a href="escola-destinacao-de-lixo" class="sub-item">Destinações de Lixo</a>
+             <a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>
+             <a href="escola-energia-eletrica" class="sub-item">Energia Elétrica</a>
+             <a href="escola-esgotamento-sanitario" class="sub-item">Esgotamentos Sanitários</a>
+
           </div>
         </div>
         <div class="item">
