Telas Licenciamento e Horário Funcionando.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -62,12 +62,14 @@
              <a href="marca-equipamento"class="sub-item">Marca Equipamento</a>
              <a href="escola-predios-compartilhados" class="sub-item">Prédios Compartilhados</a>
              <a href="escola-telefones" class="sub-item">Telefones</a>
-             <a href="link-internet" class="sub-item">Internet</a>
+             <a href="escola-internet" class="sub-item">Internet</a>
+             <a href="escola-horario-funcionamento" class="sub-item">Horários de Funcionamento</a>
              <a href="escola-tratamento-de-lixo" class="sub-item">Tratamentos de Lixo</a>
              <a href="escola-destinacao-de-lixo" class="sub-item">Destinações de Lixo</a>
              <a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>
              <a href="escola-energia-eletrica" class="sub-item">Energia Elétrica</a>
              <a href="escola-esgotamento-sanitario" class="sub-item">Esgotamentos Sanitários</a>
+             <a href="escola-licenciamento-sanitario" class="sub-item">Licenciamentos Sanitários</a>
 
           </div>
         </div>
