Telas de Turmas.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -66,6 +66,9 @@
              <a href="escola-horario-funcionamento" class="sub-item">Horários de Funcionamento</a>
              <a href="escola-ppci" class="sub-item">PPCIs</a>
              <a href="escola-regime-escolar" class="sub-item">Regime Escolar</a>
+             <a href="escola-equipamento" class="sub-item">Equipamentos</a>
+             <a href="escola-profissional" class="sub-item">Profissionais</a>
+             <a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a>
              <a href="escola-tratamento-de-lixo" class="sub-item">Tratamentos de Lixo</a>
              <a href="escola-destinacao-de-lixo" class="sub-item">Destinações de Lixo</a>
              <a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>
@@ -82,6 +85,9 @@
           ></a>
           <div class="sub-menu">
             <a href="escolas-turmas" class="sub-item">Cadastros</a>
+            <a href="turmas-areas-conhecimento" class="sub-item">Áreas de Conhecimento</a>
+            <a href="turmas-componentes-curriculares" class="sub-item">Componentes Curriculares</a>
+            <a href="turmas-dias-semana" class="sub-item">Dias da Semana</a>
           </div>
         </div>
         <div class="item">
