Tela Escola Dependência.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -26,7 +26,10 @@
             <i class="fas fa-angle-right dropdown"></i
           ></a>
           <div class="sub-menu">
+            <a href="area-conhecimento" class="sub-item">Áreas de Conhecimento</a>
             <a href="ato-regulatorio" class="sub-item">Atos Regulatórios</a>
+            <a href="cargo-professor" class="sub-item">Cargo Professor</a>
+			<a href="componente-curricular" class="sub-item">Componente Curricular</a>
             <a href="categoriaEscolaPrivada" class="sub-item">Categoria Escola Privada</a>
 			<a href="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
 			<a href="destinacaoLixo" class="sub-item">Destinação de Lixo</a>
@@ -35,12 +38,14 @@
 			<a href="fonteEnergia" class="sub-item">Fonte de Energia</a>
 			<a href="forma-ocupacao" class="sub-item">Formas de Ocupação</a>
 			<a href="fornecimentoDeAgua" class="sub-item">Fornecimento de Água</a>
+			<a href="instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a>
 			<a href="linguas-ensino" class="sub-item">Línguas de Ensino</a>
 			<a href="tipoLocalizacao" class="sub-item">Localização</a>
 			<a href="tipoAtoRegulatorio" class="sub-item">Tipo Ato Regulatório</a>
 			<a href="telefones" class="sub-item">Tipo Telefone</a>
 			<a href="modalidade-escolar" class="sub-item">Modalidade Escolar</a>
 			<a href="orgaoPublico" class="sub-item">Orgão Público</a>
+			<a href="forma-organ-ensino" class="sub-item">Organização Ensino</a>
 			<a href="periodicidade" class="sub-item">Periodicidade</a>
 			<a href="provedorInternet" class="sub-item">Provedor Internet</a>
 			<a href="situacaoFuncionamento" class="sub-item">Situação de Funcionamento</a>
@@ -58,10 +63,12 @@
              <a href="escolas" class="sub-item">Cadastros</a>
           	 <a href="acessar-escolas" class="sub-item">Minhas Escolas</a>
              <a href="escola-modalidades" class="sub-item">Modalidades</a>
+             <a href="escola-dependencias" class="sub-item">Dependências</a>
              <a href="escola-linguas-de-ensino" class="sub-item">Línguas de Ensino</a>
              <a href="marca-equipamento"class="sub-item">Marca Equipamento</a>
              <a href="escola-predios-compartilhados" class="sub-item">Prédios Compartilhados</a>
              <a href="escola-telefones" class="sub-item">Telefones</a>
+             <a href="escola-termo-colaboracao" class="sub-item">Termos de Colaboração</a>
              <a href="escola-internet" class="sub-item">Internet</a>
              <a href="escola-horario-funcionamento" class="sub-item">Horários de Funcionamento</a>
              <a href="escola-ppci" class="sub-item">PPCIs</a>
