--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -31,8 +31,10 @@
             <a href="cargo-professor" class="sub-item">Cargo Professor</a>
 			<a href="componentes-curriculares" class="sub-item">Componentes Curriculares</a>
             <a href="categoriaEscolaPrivada" class="sub-item">Categoria Escola Privada</a>
+            <a href="deficiencias" class="sub-item">Deficiências</a>
 			<a href="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
 			<a href="destinacaoLixo" class="sub-item">Destinação de Lixo</a>
+			<a href="equipamentos" class="sub-item">Equipamentos</a>
 			<a href="entidadeSuperior" class="sub-item">Entidade Superior</a>
 			<a href="esgotoSanitario" class="sub-item">Esgotamento Sanitário</a>
 			<a href="fonteEnergia" class="sub-item">Fonte de Energia</a>
@@ -41,19 +43,29 @@
 			<a href="instrutor-pedagogico" class="sub-item">Instrutores Pedagógicos</a>
 			<a href="linguas-ensino" class="sub-item">Línguas de Ensino</a>
 			<a href="tipoLocalizacao" class="sub-item">Localização</a>
-			<a href="tipoAtoRegulatorio" class="sub-item">Tipo Ato Regulatório</a>
-			<a href="telefones" class="sub-item">Tipo Telefone</a>
+			<a href="municipios" class="sub-item">Município</a>
 			<a href="nacionalidade" class="sub-item">Nacionalidade</a>
 			<a href="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
 			<a href="orgaoPublico" class="sub-item">Orgão Público</a>
 			<a href="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>
+			<a href="pais" class="sub-item">País</a>
 			<a href="periodicidade" class="sub-item">Periodicidade</a>
 			<a href="provedorInternet" class="sub-item">Provedor Internet</a>
 			<a href="raca" class="sub-item">Raças</a>
 			<a href="situacaoFuncionamento" class="sub-item">Situação de Funcionamento</a>
 			<a href="situacao-professor" class="sub-item">Situação Professor</a>
+			<a href="tipoAtoRegulatorio" class="sub-item">Tipo Ato Regulatório</a>
+			<a href="tipo-atendimento" class="sub-item">Tipo Atendimento</a>
+			<a href="tipo-dependencia" class="sub-item">Tipo Dependência</a>
+			<a href="tipo-ensino-medio" class="sub-item">Tipo Ensino Médio</a>
+			<a href="tipo-profissional" class="sub-item">Tipo Profissional</a>
+			<a href="tipo-medicao" class="sub-item">Tipo Medição</a>
+			<a href="turnos" class="sub-item">Turnos</a>
+			<a href="turno-professor" class="sub-item">Turno Professor</a>
+			<a href="telefones" class="sub-item">Tipo Telefone</a>
 			<a href="tipos-dependencias-adm" class="sub-item">Tipos de Dependências Adm</a>
 			<a href="tratamentoDeLixo" class="sub-item">Tratamento de Lixo</a>
+			<a href="ufs" class="sub-item">UFs</a>
 			<a href="zoneamento" class="sub-item">Zoneamento</a>
           </div>
         </div> 
