Tela de países.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -48,7 +48,7 @@
 			<a href="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
 			<a href="orgaoPublico" class="sub-item">Orgão Público</a>
 			<a href="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>
-			<a href="pais" class="sub-item">País</a>
+			<a href="paises" class="sub-item">Países</a>
 			<a href="periodicidade" class="sub-item">Periodicidade</a>
 			<a href="provedorInternet" class="sub-item">Provedor Internet</a>
 			<a href="raca" class="sub-item">Raças</a>
