Novas telas na aba professor.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -173,11 +173,12 @@
         </div>
         <div class="item">
           <a class="sub-btn">
-            <i class="fa-solid fa-users"></i>Pessoas
+            <i class="fa-solid fa-people-group"></i>Pessoas
             <i class="fas fa-angle-right dropdown"></i
           ></a>
           <div class="sub-menu">
             <a href="listarPessoas" class="sub-item">Cadastros</a>
+            <a href="pessoas-nacionalidades" class="sub-item">Nacionalidades</a>
           </div>
         </div>
       </nav>
