Tela professor deficiência e tela professor escola.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -155,6 +155,7 @@
               >Componentes Curriculares</a
             >
             <a href="turmas-dias-semana" class="sub-item">Dias da Semana</a>
+            <a href="turmas-professores" class="sub-item">Professores</a>
           </div>
         </div>
         <div class="item">
@@ -162,7 +163,12 @@
             <i class="fa-solid fa-chalkboard-user"></i>Professores
             <i class="fas fa-angle-right dropdown"></i
           ></a>
-          <div class="sub-menu"></div>
+          <div class="sub-menu">
+            <a href="professores" class="sub-item">Cadastros</a>
+            <a href="professores-deficiencia" class="sub-item">Deficiências</a>
+            <a href="professores-escola" class="sub-item">Escolas</a>
+            <a href="professores-formacao" class="sub-item">Formação</a>
+          </div>
         </div>
         <div class="item">
           <a class="sub-btn">
