Novas telas de pré cadastros.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -55,6 +55,8 @@
             >
             <a href="linguas-ensino" class="sub-item">Línguas de Ensino</a>
             <a href="tipoLocalizacao" class="sub-item">Localização</a>
+            <a href="marca-equipamento" class="sub-item">Marcas de Equipamentos</a>
+            <a href="modalidade-escolar" class="sub-item">Modalidades Escolares</a>
             <a href="municipios" class="sub-item">Município</a>
             <a href="nacionalidade" class="sub-item">Nacionalidade</a>
             <a href="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
@@ -64,6 +66,7 @@
             >
             <a href="paises" class="sub-item">Países</a>
             <a href="periodicidade" class="sub-item">Periodicidade</a>
+            <a href="periodo-letivo" class="sub-item">Período Letivo</a>
             <a href="provedorInternet" class="sub-item">Provedor Internet</a>
             <a href="raca" class="sub-item">Raças</a>
             <a href="situacaoFuncionamento" class="sub-item"
@@ -154,6 +157,7 @@
             <a href="turmas-componentes-curriculares" class="sub-item"
               >Componentes Curriculares</a
             >
+            <a href="turmas-disciplina" class="sub-item">Disciplinas</a>
             <a href="turmas-dias-semana" class="sub-item">Dias da Semana</a>
             <a href="turmas-professores" class="sub-item">Professores</a>
           </div>
@@ -166,6 +170,7 @@
           <div class="sub-menu">
             <a href="professores" class="sub-item">Cadastros</a>
             <a href="professores-deficiencia" class="sub-item">Deficiências</a>
+            <a href="professores-disciplina" class="sub-item">Disciplinas</a>
             <a href="professores-escola" class="sub-item">Escolas</a>
             <a href="professores-formacao" class="sub-item">Formação</a>
           </div>
