Novas telas na aba cursos.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -55,8 +55,12 @@
             >
             <a href="linguas-ensino" class="sub-item">Línguas de Ensino</a>
             <a href="tipoLocalizacao" class="sub-item">Localização</a>
-            <a href="marca-equipamento" class="sub-item">Marcas de Equipamentos</a>
-            <a href="modalidade-escolar" class="sub-item">Modalidades Escolares</a>
+            <a href="marca-equipamento" class="sub-item"
+              >Marcas de Equipamentos</a
+            >
+            <a href="modalidade-escolar" class="sub-item"
+              >Modalidades Escolares</a
+            >
             <a href="municipios" class="sub-item">Município</a>
             <a href="nacionalidade" class="sub-item">Nacionalidade</a>
             <a href="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
@@ -160,6 +164,17 @@
             <a href="turmas-disciplina" class="sub-item">Disciplinas</a>
             <a href="turmas-dias-semana" class="sub-item">Dias da Semana</a>
             <a href="turmas-professores" class="sub-item">Professores</a>
+          </div>
+        </div>
+        <div class="item">
+          <a class="sub-btn">
+            <i class="fa-solid fa-graduation-cap"></i>Cursos
+            <i class="fas fa-angle-right dropdown"></i
+          ></a>
+          <div class="sub-menu">
+            <a href="cursos" class="sub-item">Cadastros</a>
+            <a href="cursos-serie" class="sub-item">Séries</a>
+            <a href="cursos-grade-curricular" class="sub-item">Grade Currícular</a>
           </div>
         </div>
         <div class="item">
