Conclusão das telas de currículos.

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -106,6 +106,7 @@
             <a href="acessar-escolas" class="sub-item">Minhas Escolas</a>
             <a href="escola-modalidades" class="sub-item">Modalidades</a>
             <a href="escola-dependencias" class="sub-item">Dependências</a>
+            <a href="disciplinas" class="sub-item">Disciplinas</a>
             <a href="escola-linguas-de-ensino" class="sub-item"
               >Línguas de Ensino</a
             >
@@ -173,8 +174,9 @@
           ></a>
           <div class="sub-menu">
             <a href="cursos" class="sub-item">Cadastros</a>
-            <a href="cursos-serie" class="sub-item">Séries</a>
+            <a href="curriculos" class="sub-item">Currículos</a>
             <a href="cursos-grade-curricular" class="sub-item">Grade Currícular</a>
+            <a href="cursos-serie" class="sub-item">Séries</a>
           </div>
         </div>
         <div class="item">
