--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -39,46 +39,50 @@
 						Conhecimento</a> <a href="ato-regulatorio" class="sub-item">Atos
 						Regulatórios</a> <a href="cargo-professor" class="sub-item">Cargo
 						Professor</a> <a href="componentes-curriculares" class="sub-item">Componentes
-						Curriculares</a> <a href="categoriaEscolaPrivada" class="sub-item">Categoria
+						Curriculares</a> <a href="categoriaEscolaPrivada" class="sub-item" id="categoriaEscolaPrivada">Categoria
 						Escola Privada</a> <a href="deficiencias" class="sub-item">Deficiências</a>
 					<a href="dependencia-administrativa" class="sub-item">Dependências
-						Administrativas</a> <a href="destinacaoLixo" class="sub-item">Destinação
-						de Lixo</a> <a href="equipamentos" class="sub-item">Equipamentos</a> <a
-						href="entidadeSuperior" class="sub-item">Entidade Superior</a> <a
-						href="esgotoSanitario" class="sub-item">Esgotamento Sanitário</a>
-					<a href="fonteEnergia" class="sub-item">Fonte de Energia</a> <a
-						href="forma-ocupacao" class="sub-item">Formas de Ocupação</a> <a
-						href="fornecimentoDeAgua" class="sub-item">Fornecimento de
-						Água</a> <a href="instrutor-pedagogico" class="sub-item">Instrutores
-						Pedagógicos</a> <a href="linguas-ensino" class="sub-item">Línguas
-						de Ensino</a> <a href="tipoLocalizacao" class="sub-item">Localização</a>
-					<a href="marca-equipamento" class="sub-item">Marcas de
-						Equipamentos</a> <a href="modalidade-escolar" class="sub-item">Modalidades
+						Administrativas</a> <a href="destinacaoLixo" id="destinacaoLixo"
+						class="sub-item">Destinação de Lixo</a> <a href="equipamentos"
+						class="sub-item" id="equipamentos">Equipamentos</a> <a
+						href="entidadeSuperior" class="sub-item" id="entidadeSuperior">Entidade
+						Superior</a> <a href="esgotoSanitario" class="sub-item"
+						id="esgotamentoSanitario">Esgotamento Sanitário</a> <a
+						href="fonteEnergia" class="sub-item" id="fonteEnergiaEletrica">Fonte
+						de Energia</a> <a href="forma-ocupacao" class="sub-item"
+						id="formaOcupacao">Formas de Ocupação</a> 
+						<a href="fornecimentoDeAgua" class="sub-item" id="fornecimentoAgua">Fornecimento de Água</a>
+						 <a href="instrutor-pedagogico" class="sub-item"
+						id="intrutoresPedagogicos">Instrutores Pedagógicos</a> <a
+						href="linguas-ensino" class="sub-item" id="linguaEnsino">Línguas de Ensino</a> <a
+						href="tipoLocalizacao" class="sub-item" id="localizacao">Localização</a> <a
+						href="marca-equipamento" class="sub-item" id="marcaEquipamento">Marcas de
+						Equipamentos</a> <a href="modalidade-escolar" class="sub-item" id="modalidadeEscolar">Modalidades
 						Escolares</a> <a href="municipios" class="sub-item">Município</a> <a
 						href="nacionalidade" class="sub-item">Nacionalidade</a> <a
 						href="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
-					<a href="orgaoPublico" class="sub-item">Orgão Público</a> <a
+					<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão Público</a> <a
 						href="forma-organ-ensino" class="sub-item">Organizações de
 						Ensino</a> <a href="paises" class="sub-item">Países</a> <a
-						href="periodicidade" class="sub-item">Periodicidade</a> <a
+						href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a> <a
 						href="periodo-letivo" class="sub-item">Período Letivo</a> <a
-						href="provedorInternet" class="sub-item">Provedor Internet</a> <a
+						href="provedorInternet" class="sub-item" id="provedorInternet">Provedor Internet</a> <a
 						href="raca" class="sub-item">Raças</a> <a
 						href="situacaoFuncionamento" class="sub-item">Situação de
 						Funcionamento</a> <a href="situacao-professor" class="sub-item">Situação
 						Professor</a> <a href="tipoAtoRegulatorio" class="sub-item">Tipo
 						Ato Regulatório</a> <a href="tipo-atendimento" class="sub-item">Tipo
-						Atendimento</a> <a href="tipo-dependencia" class="sub-item">Tipo
+						Atendimento</a> <a href="tipo-dependencia" class="sub-item" id="tipoDependencia">Tipo
 						Dependência</a> <a href="tipo-ensino-medio" class="sub-item">Tipo
-						Ensino Médio</a> <a href="tipo-profissional" class="sub-item">Tipo
+						Ensino Médio</a> <a href="tipo-profissional" class="sub-item" id="tipoProfissional">Tipo
 						Profissional</a> <a href="tipo-medicao" class="sub-item">Tipo
 						Medição</a> <a href="turnos" class="sub-item">Turnos</a> <a
 						href="turno-professor" class="sub-item">Turno Professor</a> <a
 						href="telefones" class="sub-item">Tipo Telefone</a> <a
 						href="dependenciasAdm" class="sub-item">Tipos de Dependências
-						Adm</a> <a href="tratamentoDeLixo" class="sub-item">Tratamento de
+						Adm</a> <a href="tratamentoDeLixo" class="sub-item" id="tratamentoLixo">Tratamento de
 						Lixo</a> <a href="ufs" class="sub-item">UFs</a> <a href="zoneamento"
-						class="sub-item">Zoneamento</a>
+						class="sub-item" id="zoneamento">Zoneamento</a>
 				</div>
 			</div>
 			<div class="item">
@@ -116,8 +120,8 @@
 				<a class="sub-btn"> <i class="fa-solid fa-bars-staggered"></i>Turmas
 					<i class="fas fa-angle-right dropdown"></i></a>
 				<div class="sub-menu">
-					<a href="escolas-turmas" class="sub-item">Cadastros</a> <a
-						href="turmas-areas-conhecimento" class="sub-item">Áreas de
+					<a href="escolas-turmas" class="sub-item" id="escola">Cadastros</a>
+					<a href="turmas-areas-conhecimento" class="sub-item">Áreas de
 						Conhecimento</a> <a href="turmas-componentes-curriculares"
 						class="sub-item">Componentes Curriculares</a> <a
 						href="turmas-disciplina" class="sub-item">Disciplinas</a> <a
@@ -159,10 +163,17 @@
 						href="pessoas-nacionalidades" class="sub-item">Nacionalidades</a>
 				</div>
 			</div>
-			
-			<input value="<%=contextPath%>" id="caminhoRelativo" hidden>
-			
-			<div id="sair">Sair</div>
+
+			<div class="item">
+				<a class="sub-btn"><i class="fa-solid fa-right-from-bracket"></i>Sair
+					<i class="fas fa-angle-right dropdown"></i></a>
+				<div class="sub-menu">
+					<a class="sub-btn"> <i class="fa-solid fa-circle-user"></i>Login
+					</a> <a class="sub-btn"> <i class="fa-solid fa-school"></i>Escolas
+					</a>
+				</div>
+			</div>
+
 		</nav>
 	</section>
 </body>
