Crud da infraestrutura finalizado e sub itens do menu comentados

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -92,22 +92,22 @@
 						<a href="escolas" class="sub-item">Cadastros</a> 
 						<a href="acessar-escolas" class="sub-item">Minhas Escolas</a> 
 						<a href="escola-agua" class="sub-item">Água</a> 
-						<a href="escola-destinacao-de-lixo" class="sub-item">Destinações de Lixo</a>
-						<a href="escola-disciplinas" class="sub-item">Disciplinas</a>
+		<!-- 				<a href="escola-destinacao-de-lixo" class="sub-item">Destinações de Lixo</a> -->
+<!-- 						<a href=z"escola-disciplinas" class="sub-item">Disciplinas</a> -->
 						<a href="escola-dispostivo" class="sub-item">Dispositivos</a>
-						<a href="escola-equipamento" class="sub-item">Equipamentos</a>
+		<!-- 				<a href="escola-equipamento" class="sub-item">Equipamentos</a> -->
 						<a href="escola-energia-eletrica" class="sub-item">Energia Elétrica</a>
-						<a href="escola-esgotamento-sanitario" class="sub-item">Esgotamentos Sanitários</a>
+		<!-- 				<a href="escola-esgotamento-sanitario" class="sub-item">Esgotamentos Sanitários</a> -->
 						<a href="escola-esgoto" class="sub-item">Esgoto</a>
-						<a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>
+						<!-- <a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>
 						<a href="escola-horario-funcionamento" class="sub-item">Horários de Funcionamento</a>
-						<a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a>
+						<a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a> -->
 						<a href="escola-infraestrutura" class="sub-item">Infraestrutura</a>
-						<a href="escola-internet" class="sub-item">Internet</a>
+						<!-- <a href="escola-internet" class="sub-item">Internet</a>
 						<a href="escola-licenciamento-sanitario" class="sub-item">Licenciamentos Sanitários</a>
-						<a href="escola-linguas-de-ensino" class="sub-item">Línguas de Ensino</a>
+						<a href="escola-linguas-de-ensino" class="sub-item">Línguas de Ensino</a> -->
 						<a href="escola-lixo" class="sub-item">Lixo</a>
-						<a href="escola-marca-equipamento" class="sub-item">Marca Equipamento</a>
+						<!-- <a href="escola-marca-equipamento" class="sub-item">Marca Equipamento</a>
 						<a href="escola-modalidades" class="sub-item">Modalidades</a>
 						<a href="escola-ppci" class="sub-item">PPCIs</a>
 						<a href="escola-predios-compartilhados" class="sub-item">Prédios Compartilhados</a>
@@ -115,7 +115,7 @@
 						<a href="escola-regime-escolar" class="sub-item">Regime Escolar</a>
 						<a href="escola-termo-colaboracao" class="sub-item">Termos de Colaboração</a>
 						<a href="escola-telefones" class="sub-item">Telefones</a>
-						<a href="escola-tratamento-de-lixo" class="sub-item">Tratamentos de Lixo</a>
+						<a href="escola-tratamento-de-lixo" class="sub-item">Tratamentos de Lixo</a> -->
 				</div>
 			</div>
 			<div class="item">
