--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -2,12 +2,13 @@
 <head></head>
 <body>
 
-	<section id="menu-mobile">
+	<section id="menu-mobile" class="menu-mobile">
 		<div class="container-header">
 			<div class="img-mobile-menu">
 				<img class="logo-sumare-mobile"
 					src="http://localhost:8090/front-educacional-caxias/resources/assets/img/logoBranco.png"
-					alt="Logo Prefeitura Caxias do Sul"/>
+					alt="Logo Prefeitura Caxias do Sul"
+					/>
 
 			</div>
 			<i class="fa-solid fa-bars" id="barsIcon"></i>
@@ -20,8 +21,9 @@
 		<div class="img-menu">
 		
 			<img class="logoSumare animate__animated animate__bounceIn mx-auto"
-					src="http://localhost:8090/front-educacional-caxias/resources/assets/img/logoBranco.png"
-					alt="Logo Prefeitura Caxias do Sul"/>
+					alt="Logo Prefeitura Caxias do Sul"
+					id="imgLogo"
+					/>
 		
 		</div>
 
