--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -35,14 +35,14 @@
 				<a class="sub-btn"><i class="fas fa-cogs"></i>Configurações <i
 					class="fas fa-angle-right dropdown"></i></a>
 				<div class="sub-menu">
-					<a href="area-conhecimento" class="sub-item">Áreas de
-						Conhecimento</a> <a href="ato-regulatorio" class="sub-item">Atos
-						Regulatórios</a> <a href="cargo-professor" class="sub-item">Cargo
-						Professor</a> <a href="componentes-curriculares" class="sub-item">Componentes
+					<a href="area-conhecimento" id="area-conhecimento" class="sub-item">Áreas de
+						Conhecimento</a> <a href="ato-regulatorio" id="ato-regulatorio" class="sub-item">Atos
+						Regulatórios</a> <a href="cargo-professor" id="cargo-professor" class="sub-item">Cargo
+						Professor</a> <a href="componentes-curriculares" id="componentes-curriculares" class="sub-item">Componentes
 						Curriculares</a> <a href="categoriaEscolaPrivada" class="sub-item"
 						id="categoriaEscolaPrivada">Categoria Escola Privada</a> <a
-						href="deficiencias" class="sub-item">Deficiências</a> <a
-						href="dependencia-administrativa" class="sub-item">Dependências
+						href="deficiencias" id="deficiencias" class="sub-item">Deficiências</a> <a
+						href="dependencia-administrativa" id="dependencia-administrativa" class="sub-item">Dependências
 						Administrativas</a> <a href="destinacaoLixo" id="destinacaoLixo"
 						class="sub-item">Destinação de Lixo</a> <a href="equipamentos"
 						class="sub-item" id="equipamentos">Equipamentos</a> <a
@@ -61,31 +61,31 @@
 						class="sub-item" id="marcaEquipamento">Marcas de Equipamentos</a>
 					<a href="modalidade-escolar" class="sub-item"
 						id="modalidadeEscolar">Modalidades Escolares</a> <a
-						href="municipios" class="sub-item">Município</a> <a
-						href="nacionalidade" class="sub-item">Nacionalidade</a> <a
-						href="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
+						href="municipios" id="municipios" class="sub-item">Município</a> <a
+						href="nacionalidade" id="nacionalidade" class="sub-item">Nacionalidade</a> <a
+						href="nivel-escolaridade" id="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
 					<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão
-						Público</a> <a href="forma-organ-ensino" class="sub-item">Organizações
-						de Ensino</a> <a href="paises" class="sub-item">Países</a> <a
+						Público</a> <a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações
+						de Ensino</a> <a href="paises" id="paises"  class="sub-item">Países</a> <a
 						href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>
-					<a href="periodo-letivo" class="sub-item">Período Letivo</a> <a
+					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período Letivo</a> <a
 						href="provedorInternet" class="sub-item" id="provedorInternet">Provedor
-						Internet</a> <a href="raca" class="sub-item">Raças</a> <a
-						href="situacaoFuncionamento" class="sub-item">Situação de
-						Funcionamento</a> <a href="situacao-professor" class="sub-item">Situação
-						Professor</a> <a href="tipoAtoRegulatorio" class="sub-item">Tipo
-						Ato Regulatório</a> <a href="tipo-atendimento" class="sub-item">Tipo
+						Internet</a> <a href="raca" id="raca" class="sub-item">Raças</a> <a
+						href="situacaoFuncionamento" id="situacaoFuncionamento" class="sub-item">Situação de
+						Funcionamento</a> <a href="situacao-professor" id="situacao-professor" class="sub-item">Situação
+						Professor</a> <a href="tipoAtoRegulatorio" id="tipoAtoRegulatorio" class="sub-item">Tipo
+						Ato Regulatório</a> <a href="tipo-atendimento" id="tipo-atendimento" class="sub-item">Tipo
 						Atendimento</a> <a href="tipo-dependencia" class="sub-item"
 						id="tipoDependencia">Tipo Dependência</a> <a
-						href="tipo-ensino-medio" class="sub-item">Tipo Ensino Médio</a> <a
+						href="tipo-ensino-medio" id="tipo-ensino-medio" class="sub-item">Tipo Ensino Médio</a> <a
 						href="tipo-profissional" class="sub-item" id="tipoProfissional">Tipo
-						Profissional</a> <a href="tipo-medicao" class="sub-item">Tipo
-						Medição</a> <a href="turnos" class="sub-item">Turnos</a> <a
-						href="turno-professor" class="sub-item">Turno Professor</a> <a
-						href="telefones" class="sub-item">Tipo Telefone</a> <a
-						href="dependenciasAdm" class="sub-item">Tipos de Dependências
+						Profissional</a> <a href="tipo-medicao" id="tipo-medicao" class="sub-item">Tipo
+						Medição</a> <a href="turnos" id="turnos" class="sub-item">Turnos</a> <a
+						href="turno-professor" id="turno-professor" class="sub-item">Turno Professor</a> <a
+						href="telefones" id="telefones" class="sub-item">Tipo Telefone</a> <a
+						href="dependenciasAdm" id="dependenciasAdm" class="sub-item">Tipos de Dependências
 						Adm</a> <a href="tratamentoDeLixo" class="sub-item"
-						id="tratamentoLixo">Tratamento de Lixo</a> <a href="ufs"
+						id="tratamentoLixo">Tratamento de Lixo</a> <a href="ufs" id="ufs"
 						class="sub-item">UFs</a> <a href="zoneamento" class="sub-item"
 						id="zoneamento">Zoneamento</a>
 				</div>
@@ -94,25 +94,25 @@
 				<a class="sub-btn"> <i class="fa-solid fa-school"></i>Escolas <i
 					class="fas fa-angle-right dropdown"></i></a>
 				<div class="sub-menu">
-					<a href="escolas" class="sub-item">Cadastros</a> <a
-						href="acessar-escolas" class="sub-item">Minhas Escolas</a> <a
-						href="escola-agua" class="sub-item">Água</a>
+					<a href="escolas" href="cadastros-escolas" class="sub-item">Cadastros</a> <a
+						href="acessar-escolas" id="acessar-escolas" class="sub-item">Minhas Escolas</a> <a
+						href="escola-agua" id="escola-agua" class="sub-item">Água</a>
 					<!-- 				<a href="escola-destinacao-de-lixo" class="sub-item">Destinações de Lixo</a> -->
 					<!-- 						<a href=z"escola-disciplinas" class="sub-item">Disciplinas</a> -->
-					<a href="escola-dispostivo" class="sub-item">Dispositivos</a>
+					<a href="escola-dispostivo" id="escola-dispostivo" class="sub-item">Dispositivos</a>
 					<!-- 				<a href="escola-equipamento" class="sub-item">Equipamentos</a> -->
-					<a href="escola-energia-eletrica" class="sub-item">Energia
+					<a href="escola-energia-eletrica" id="escola-energia-eletrica" class="sub-item">Energia
 						Elétrica</a>
 					<!-- 				<a href="escola-esgotamento-sanitario" class="sub-item">Esgotamentos Sanitários</a> -->
-					<a href="escola-esgoto" class="sub-item">Esgoto</a>
+					<a href="escola-esgoto" id="escola-esgoto" class="sub-item">Esgoto</a>
 					<!-- <a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>
 						<a href="escola-horario-funcionamento" class="sub-item">Horários de Funcionamento</a>
 						<a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a> -->
-					<a href="escola-infraestrutura" class="sub-item">Infraestrutura</a>
+					<a href="escola-infraestrutura" id="escola-infraestrutura" class="sub-item">Infraestrutura</a>
 					<!-- <a href="escola-internet" class="sub-item">Internet</a>
 						<a href="escola-licenciamento-sanitario" class="sub-item">Licenciamentos Sanitários</a>
 						<a href="escola-linguas-de-ensino" class="sub-item">Línguas de Ensino</a> -->
-					<a href="escola-lixo" class="sub-item">Lixo</a>
+					<a href="escola-lixo" id="escola-lixo" class="sub-item">Lixo</a>
 					<!-- <a href="escola-marca-equipamento" class="sub-item">Marca Equipamento</a>
 						<a href="escola-modalidades" class="sub-item">Modalidades</a>
 						<a href="escola-ppci" class="sub-item">PPCIs</a>
@@ -128,13 +128,13 @@
 				<a class="sub-btn"> <i class="fa-solid fa-bars-staggered"></i>Turmas
 					<i class="fas fa-angle-right dropdown"></i></a>
 				<div class="sub-menu">
-					<a href="escolas-turmas" class="sub-item" id="escola">Cadastros</a>
-					<a href="turmas-areas-conhecimento" class="sub-item">Áreas de
+					<a href="escolas-turmas" class="sub-item" id="escolas-turmas">Cadastros</a>
+					<a href="turmas-areas-conhecimento" id="turmas-areas-conhecimento" class="sub-item">Áreas de
 						Conhecimento</a> <a href="turmas-componentes-curriculares"
 						class="sub-item">Componentes Curriculares</a> <a
-						href="turmas-disciplina" class="sub-item">Disciplinas</a> <a
-						href="turmas-dias-semana" class="sub-item">Dias da Semana</a> <a
-						href="turmas-professores" class="sub-item">Professores</a>
+						href="turmas-disciplina" id="turmas-disciplina" class="sub-item">Disciplinas</a> <a
+						href="turmas-dias-semana" id="turmas-dias-semana class="sub-item">Dias da Semana</a> <a
+						href="turmas-professores" id="turmas-professores" class="sub-item">Professores</a>
 				</div>
 			</div>
 			<div class="item">
