--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -53,14 +53,14 @@
 					<a href="instrutor-pedagogico" class="sub-item" id="intrutoresPedagogicos">Instrutores Pedagógicos</a>
 					<a href="linguas-ensino" class="sub-item" id="linguaEnsino">Línguas de Ensino</a>
 					<a href="tipoLocalizacao" class="sub-item" id="localizacao">Localização</a>
-					<a href="marca-equipamento" class="sub-item" id="marcaEquipamento">Marcas de Equipamentos</a> -->
+					<a href="marca-equipamento" class="sub-item" id="marcaEquipamento">Marcas de Equipamentos</a> 
 					<a href="modalidade-escolar" class="sub-item" id="modalidadeEscolar">Modalidades Escolares</a>
-					<!-- <a href="municipios" id="municipios" class="sub-item">Município</a>
+					<a href="municipios" id="municipios" class="sub-item">Município</a>
 					<a href="nacionalidade" id="nacionalidade" class="sub-item">Nacionalidade</a>
 					<a href="nivel-escolaridade" id="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
 					<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão Público</a>
-					<a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações de Ensino</a> -->
-					<!-- <a href="paises" id="paises" class="sub-item">Países</a> -->
+					<a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>
+					<a href="paises" id="paises" class="sub-item">Países</a> -->
 					<a href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>
 					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período Letivo</a>
 					<!-- <a href="provedorInternet" class="sub-item" id="provedorInternet">Provedor Internet</a>
