--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -54,7 +54,7 @@
 					<!-- <a href="categoriaEscolaPrivada" class="sub-item" id="categoriaEscolaPrivada">Categoria Escola Privada</a>
 					<a href="deficiencias" id="deficiencias" class="sub-item">Deficiências</a>
 					<a href="dependencia-administrativa" id="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
-					<a href="destinacaoLixo" id="destinacaoLixo" class="sub-item">Destinação de Lixo</a>
+					<a href="destinacaoLixo" id="destLixo" class="sub-item">Destinação de Lixo</a>
 					<a href="equipamentos" class="sub-item" id="equipamentos">Equipamentos</a>
 					<a href="entidadeSuperior" class="sub-item" id="entidadeSuperior">Entidade Superior</a>
 					<a href="esgotoSanitario" class="sub-item" id="esgotamentoSanitario">Esgotamento Sanitário</a>
@@ -84,8 +84,7 @@
 						Professor</a> <a href="tipoAtoRegulatorio" id="tipoAtoRegulatorio"
 						class="sub-item">Tipo Ato Regulatório</a>
 					<!-- <a href="tipo-atendimento" id="tipo-atendimento" class="sub-item">Tipo Atendimento</a> -->
-					<a href="tipo-dependencia" class="sub-item" id="tipoDependencia">Tipo
-						Dependência</a>
+					<a href="tipo-dependencia" class="sub-item" id="tipoDependencia">Tipo Dependência</a>
 					<!-- <a href="tipo-ensino-medio" id="tipo-ensino-medio" class="sub-item">Tipo Ensino Médio</a>
 					<a href="tipo-profissional" class="sub-item" id="tipoProfissional">Tipo Profissional</a>
 					<a href="tipo-medicao" id="tipo-medicao" class="sub-item">Tipo Medição</a> -->
