Modalidade Escolar Feito

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -64,15 +64,15 @@
 					<a href="instrutor-pedagogico" class="sub-item" id="intrutoresPedagogicos">Instrutores Pedagógicos</a>
 					<a href="linguas-ensino" class="sub-item" id="linguaEnsino">Línguas de Ensino</a>
 					<a href="tipoLocalizacao" class="sub-item" id="localizacao">Localização</a>
-					<a href="marca-equipamento" class="sub-item" id="marcaEquipamento">Marcas de Equipamentos</a> 
-					<a href="modalidade-escolar" class="sub-item" id="modalidadeEscolar">Modalidades Escolares</a>
-					<a href="municipios" id="municipios" class="sub-item">Município</a>
+					<a href="marca-equipamento" class="sub-item" id="marcaEquipamento">Marcas de Equipamentos</a> -->
+					<a href="modalidade" class="sub-item" id="modalidadeEscolar">Modalidades Escolares</a>
+					<!-- <a href="municipios" id="municipios" class="sub-item">Município</a>
 					<a href="nacionalidade" id="nacionalidade" class="sub-item">Nacionalidade</a>
 					<a href="nivel-escolaridade" id="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
 					<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão Público</a>
 					<a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>
 					<a href="paises" id="paises" class="sub-item">Países</a>-->
-					<a href="modalidades" class="sub-item">Modalidades</a> 
+				<!-- 	<a href="modalidades" class="sub-item">Modalidades</a>  -->
 					<!-- <a href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>
 					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período 
 						Letivo</a>-->
@@ -115,9 +115,9 @@
 						class="sub-item">Energia Elétrica</a>
 					<!-- <a href="escola-esgotamento-sanitario" class="sub-item">Esgotamentos Sanitários</a> -->
 					<a href="escola-esgoto" id="escola-esgoto" class="sub-item">Esgoto</a>
-					<!-- <a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>
+					<!-- <a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>-->
 						<a href="escola-horario-funcionamento" class="sub-item">Horários de Funcionamento</a>
-						<a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a> -->
+						<!-- <a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a> -->
 					<a href="escola-infraestrutura" id="escola-infraestrutura"
 						class="sub-item">Infraestrutura</a>
 					<!-- <a href="escola-internet" class="sub-item">Internet</a>
