Cor do botão ativa e desativa feito

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -65,14 +65,13 @@
 					<a href="linguas-ensino" class="sub-item" id="linguaEnsino">Línguas de Ensino</a>
 					<a href="tipoLocalizacao" class="sub-item" id="localizacao">Localização</a>
 					<a href="marca-equipamento" class="sub-item" id="marcaEquipamento">Marcas de Equipamentos</a> -->
-					<a href="modalidade" class="sub-item" id="modalidadeEscolar">Modalidades Escolares</a>
+					<a href="modalidades" class="sub-item" id="modalidadeEscolar">Modalidades Escolares</a>
 					<!-- <a href="municipios" id="municipios" class="sub-item">Município</a>
 					<a href="nacionalidade" id="nacionalidade" class="sub-item">Nacionalidade</a>
-					<a href="nivel-escolaridade" id="nivel-escolaridade" class="sub-item">Nível Escolaridade</a>
 					<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão Público</a>
 					<a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>
 					<a href="paises" id="paises" class="sub-item">Países</a>-->
-				<!-- 	<a href="modalidades" class="sub-item">Modalidades</a>  -->
+				
 					<!-- <a href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>
 					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período 
 						Letivo</a>-->
@@ -124,7 +123,7 @@
 						<a href="escola-licenciamento-sanitario" class="sub-item">Licenciamentos Sanitários</a>
 						<a href="escola-linguas-de-ensino" class="sub-item">Línguas de Ensino</a> -->
 					<a href="escola-lixo" id="escola-lixo" class="sub-item">Lixo</a>
-
+					<a href="escola-modalidades" class="sub-item">Modalidades</a>
 					<!-- <a href="escola-marca-equipamento" class="sub-item">Marca Equipamento</a>
 						
 						<a href="escola-ppci" class="sub-item">PPCIs</a>
