--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -72,9 +72,9 @@
 					<a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>
 					<a href="paises" id="paises" class="sub-item">Países</a>-->
 				
-					<!-- <a href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>
+					<!-- <a href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>-->
 					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período 
-						Letivo</a>-->
+						Letivo</a>
 					<!-- <a href="provedorInternet" class="sub-item" id="provedorInternet">Provedor Internet</a>
 					<a href="raca" id="raca" class="sub-item">Raças</a> -->
 					<a href="situacaoFuncionamento" id="situacaoFuncionamento"
