Tela concurso criada e js começado, periodo letivo funcionando

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -51,6 +51,7 @@
 						Professor</a> <a href="componentes-curriculares"
 						id="componentes-curriculares" class="sub-item">Componentes
 						Curriculares</a>
+					<a href="concurso" id="concurso" class="sub-item">Concurso</a>
 					<!-- <a href="categoriaEscolaPrivada" class="sub-item" id="categoriaEscolaPrivada">Categoria Escola Privada</a>
 					<a href="deficiencias" id="deficiencias" class="sub-item">Deficiências</a>
 					<a href="dependencia-administrativa" id="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
