--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -50,8 +50,7 @@
 					<a href="cargo-professor" id="cargo-professor" class="sub-item">Cargo
 						Professor</a> <a href="componentes-curriculares"
 						id="componentes-curriculares" class="sub-item">Componentes
-						Curriculares</a>
-					<a href="concurso" id="concurso" class="sub-item">Concurso</a>
+						Curriculares</a> <a href="concurso" id="concurso" class="sub-item">Concurso</a>
 					<!-- <a href="categoriaEscolaPrivada" class="sub-item" id="categoriaEscolaPrivada">Categoria Escola Privada</a>
 					<a href="deficiencias" id="deficiencias" class="sub-item">Deficiências</a>
 					<a href="dependencia-administrativa" id="dependencia-administrativa" class="sub-item">Dependências Administrativas</a>
@@ -66,15 +65,16 @@
 					<a href="linguas-ensino" class="sub-item" id="linguaEnsino">Línguas de Ensino</a>
 					<a href="tipoLocalizacao" class="sub-item" id="localizacao">Localização</a>
 					<a href="marca-equipamento" class="sub-item" id="marcaEquipamento">Marcas de Equipamentos</a> -->
-					<a href="modalidades" class="sub-item" id="modalidadeEscolar">Modalidades Escolares</a>
+					<a href="modalidades" class="sub-item" id="modalidadeEscolar">Modalidades
+						Escolares</a>
 					<!-- <a href="municipios" id="municipios" class="sub-item">Município</a>
 					<a href="nacionalidade" id="nacionalidade" class="sub-item">Nacionalidade</a>
 					<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão Público</a>
 					<a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>
 					<a href="paises" id="paises" class="sub-item">Países</a>-->
-				
+					<a href="oferta-concurso" id="oferta-concurso" class="sub-item">Oferta Concurso</a>
 					<!-- <a href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>-->
-					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período 
+					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período
 						Letivo</a>
 					<!-- <a href="provedorInternet" class="sub-item" id="provedorInternet">Provedor Internet</a>
 					<a href="raca" id="raca" class="sub-item">Raças</a> -->
@@ -89,8 +89,8 @@
 					<!-- <a href="tipo-ensino-medio" id="tipo-ensino-medio" class="sub-item">Tipo Ensino Médio</a>
 					<a href="tipo-profissional" class="sub-item" id="tipoProfissional">Tipo Profissional</a>
 					<a href="tipo-medicao" id="tipo-medicao" class="sub-item">Tipo Medição</a> -->
-					<a href="tipo-telefone" class="sub-item" id="tipoTelefone">Tipo Telefone</a>
-					<a href="turnos" id="turnos" class="sub-item">Turnos</a>
+					<a href="tipo-telefone" class="sub-item" id="tipoTelefone">Tipo
+						Telefone</a> <a href="turnos" id="turnos" class="sub-item">Turnos</a>
 					<!-- <a href="turno-professor" id="turno-professor" class="sub-item">Turno Professor</a>
 					<a href="telefones" id="telefones" class="sub-item">Tipo Telefone</a>
 					<a href="dependenciasAdm" id="dependenciasAdm" class="sub-item">Tipos de Dependências Adm</a>
@@ -116,15 +116,16 @@
 					<!-- <a href="escola-esgotamento-sanitario" class="sub-item">Esgotamentos Sanitários</a> -->
 					<a href="escola-esgoto" id="escola-esgoto" class="sub-item">Esgoto</a>
 					<!-- <a href="escola-fornecimento-de-agua" class="sub-item">Fornecimentos de Água</a>-->
-						<a href="escola-horario-funcionamento" class="sub-item">Horários de Funcionamento</a>
-						<!-- <a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a> -->
+					<a href="escola-horario-funcionamento" class="sub-item">Horários
+						de Funcionamento</a>
+					<!-- <a href="escola-instrutor-pedagogico" class="sub-item">Instrutor Pedagógico</a> -->
 					<a href="escola-infraestrutura" id="escola-infraestrutura"
 						class="sub-item">Infraestrutura</a>
 					<!-- <a href="escola-internet" class="sub-item">Internet</a>
 						<a href="escola-licenciamento-sanitario" class="sub-item">Licenciamentos Sanitários</a>
 						<a href="escola-linguas-de-ensino" class="sub-item">Línguas de Ensino</a> -->
-					<a href="escola-lixo" id="escola-lixo" class="sub-item">Lixo</a>
-					<a href="escola-modalidades" class="sub-item">Modalidades</a>
+					<a href="escola-lixo" id="escola-lixo" class="sub-item">Lixo</a> <a
+						href="escola-modalidades" class="sub-item">Modalidades</a>
 					<!-- <a href="escola-marca-equipamento" class="sub-item">Marca Equipamento</a>
 						
 						<a href="escola-ppci" class="sub-item">PPCIs</a>
@@ -137,8 +138,8 @@
 						<a href="escola-profissional" class="sub-item">Profissionais</a>
 						<a href="escola-regime-escolar" class="sub-item">Regime Escolar</a>
 						<a href="escola-termo-colaboracao" class="sub-item">Termos de Colaboração</a> -->
-						<a href="escola-telefones" class="sub-item">Telefones</a>
-						<!-- <a href="escola-tratamento-de-lixo" class="sub-item">Tratamentos de Lixo</a> -->
+					<a href="escola-telefones" class="sub-item">Telefones</a>
+					<!-- <a href="escola-tratamento-de-lixo" class="sub-item">Tratamentos de Lixo</a> -->
 				</div>
 			</div>
 			<!-- <div class="item">
@@ -191,12 +192,14 @@
 			</div>  -->
 
 			<div class="item">
-				<a class="sub-btn"> <i class="fa-solid fa-users"></i> <span id="itemName3">Matriz Curricular</span> <i
+				<a class="sub-btn"> <i class="fa-solid fa-users"></i> <span
+					id="itemName3">Matriz Curricular</span> <i
 					class="fas fa-angle-right dropdown"></i></a>
 				<div class="sub-menu">
-					<a href="area-conhecimento" id="areaConhecimento" class="sub-item">Áreas de conhecimento</a>
-					<a href="disciplinas" id="disciplinas" class="sub-item">Disciplinas</a>
-					<a href="curso" id="curso" class="sub-item">Curso</a>
+					<a href="area-conhecimento" id="areaConhecimento" class="sub-item">Áreas
+						de conhecimento</a> <a href="disciplinas" id="disciplinas"
+						class="sub-item">Disciplinas</a> <a href="curso" id="curso"
+						class="sub-item">Curso</a>
 				</div>
 			</div>
 
