Enviando nacionalida, raca, ufs e paises pronto

--- a/WebContet/resources/menu/menu.html
+++ b/WebContet/resources/menu/menu.html
@@ -67,18 +67,19 @@
 					<a href="marca-equipamento" class="sub-item" id="marcaEquipamento">Marcas de Equipamentos</a> -->
 					<a href="modalidades" class="sub-item" id="modalidadeEscolar">Modalidades
 						Escolares</a>
-					<!-- <a href="municipios" id="municipios" class="sub-item">Município</a>
+					<!-- <a href="municipios" id="municipios" class="sub-item">Município</a>-->
 					<a href="nacionalidade" id="nacionalidade" class="sub-item">Nacionalidade</a>
-					<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão Público</a>
-					<a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>
-					<a href="paises" id="paises" class="sub-item">Países</a>-->
-					<a href="oferta-concurso" id="oferta-concurso" class="sub-item">Oferta Concurso</a>
+					<!--<a href="orgaoPublico" class="sub-item" id="orgaoPublico">Orgão Público</a>
+					<a href="forma-organ-ensino" id="forma-organ-ensino" class="sub-item">Organizações de Ensino</a>-->
+					<a href="paises" id="paises" class="sub-item">Países</a> <a
+						href="oferta-concurso" id="oferta-concurso" class="sub-item">Oferta
+						Concurso</a>
 					<!-- <a href="periodicidade" class="sub-item" id="periodicidade">Periodicidade</a>-->
 					<a href="periodo-letivo" id="periodo-letivo" class="sub-item">Período
 						Letivo</a>
-					<!-- <a href="provedorInternet" class="sub-item" id="provedorInternet">Provedor Internet</a>
-					<a href="raca" id="raca" class="sub-item">Raças</a> -->
-					<a href="situacaoFuncionamento" id="situacaoFuncionamento"
+					<!-- <a href="provedorInternet" class="sub-item" id="provedorInternet">Provedor Internet</a>-->
+					<a href="raca" id="raca" class="sub-item">Raças</a> <a
+						href="situacaoFuncionamento" id="situacaoFuncionamento"
 						class="sub-item">Situação de Funcionamento</a> <a
 						href="situacao-professor" id="situacao-professor" class="sub-item">Situação
 						Professor</a> <a href="tipoAtoRegulatorio" id="tipoAtoRegulatorio"
@@ -94,9 +95,9 @@
 					<!-- <a href="turno-professor" id="turno-professor" class="sub-item">Turno Professor</a>
 					<a href="telefones" id="telefones" class="sub-item">Tipo Telefone</a>
 					<a href="dependenciasAdm" id="dependenciasAdm" class="sub-item">Tipos de Dependências Adm</a>
-					<a href="tratamentoDeLixo" class="sub-item" id="tratamentoLixo">Tratamento de Lixo</a>
+					<a href="tratamentoDeLixo" class="sub-item" id="tratamentoLixo">Tratamento de Lixo</a>-->
 					<a href="ufs" id="ufs" class="sub-item">UFs</a>
-					<a href="zoneamento" class="sub-item" id="zoneamento">Zoneamento</a> -->
+					<!-- <a href="zoneamento" class="sub-item" id="zoneamento">Zoneamento</a> -->
 				</div>
 			</div>
 			<div class="item">
